// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser indexed assignment assigns to bracketed index 1`] = `
Array [
  IndexedSet {
    "closingSquare": Object {
      "isReserved": false,
      "kind": 3,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "]",
    },
    "index": Literal {
      "value": Int32 {
        "kind": 3,
        "value": 0,
      },
    },
    "obj": Variable {
      "name": Object {
        "isReserved": false,
        "kind": 21,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "someArray",
      },
    },
    "value": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;

exports[`parser indexed assignment assigns to dotted index 1`] = `
Array [
  DottedSet {
    "name": Object {
      "isReserved": false,
      "kind": 21,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
    "obj": Variable {
      "name": Object {
        "isReserved": false,
        "kind": 21,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "foo",
      },
    },
    "value": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
      },
      "end": Object {
        "isReserved": false,
        "kind": 45,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 57,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 9,
    },
  },
]
`;
